[package]
name          = "rusty_mujoco"
version       = "0.2.0"
edition       = "2024"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/rusty_mujoco"
homepage      = "https://crates.io/crates/rusty_mujoco"
repository    = "https://github.com/rust-control/rusty_mujoco"
readme        = "README.md"
license       = "Apache-2.0"
description   = "Rust bindings for the MuJoCo physics simulator"
keywords      = ["mujoco", "rl", "ml", "physics", "robotics"]
categories    = ["api-bindings", "science::robotics", "simulation"]

[build-dependencies]
bindgen = { optional = true, version = "=0.72.1" }
cc      = "1.2.45"

[dev-dependencies]
glfw = "0.60"

[features]
bindgen = ["dep:bindgen"]  # run bindgen at build time, instead of using pre-generated bindgen.rs

# internal
DEBUG = []
